--- a/darkmode.css
+++ b/darkmode.css
@@ -1,5 +1,6 @@
 html body {
-  background-color: #1eff00;
+  background-image: repeating-linear-gradient(-35deg, transparent, transparent 40vw, #1eff00 40vw, #1eff00 80vw);
+  background-attachment: fixed;
 }
 
 html body .wrapper .navbar {
@@ -26,8 +27,6 @@ html body .wrapper .navbar .darkmode-button .light-icon {
 
 html body .wrapper .navbar .darkmode-button:hover > i {
   color: #1eff00;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
 }
 
 html body .wrapper .navbar .social-media-icons {
@@ -65,7 +64,7 @@ html body .wrapper .navbar #hamitems a:hover {
 
 html body .wrapper #landing {
   background-image: unset;
-  background-image: repeating-linear-gradient(25deg, #1f1f1f 2px, darkgrey 2px, #1f1f1f 8px);
+  background-image: linear-gradient(45deg, black 95%, rgba(0, 0, 0, 0)), repeating-linear-gradient(25deg, #1f1f1f 10px, #3a3a3a 10px, #1f1f1f 8px);
   color: white;
 }
 
@@ -74,35 +73,49 @@ html body .wrapper main {
 }
 
 html body .wrapper main #languages-wrapper {
-  background-color: black;
+  background-color: #161616;
+  padding-left: 3vw;
+}
+
+html body .wrapper main #languages-wrapper .section-header {
+  color: white;
 }
 
 html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card {
+  background-color: #a3a3a3;
   color: black;
 }
 
 html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card:hover {
-  -webkit-transform: translateY(2px);
-          transform: translateY(2px);
-  -webkit-box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.8) inset;
-          box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.8) inset;
+  -webkit-transform: scale(1.04);
+          transform: scale(1.04);
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(87, 87, 87, 0.8);
+          box-shadow: 0px 0px 10px 5px rgba(87, 87, 87, 0.8);
 }
 
-html body .wrapper main #languages-wrapper #frameworks-wrapper {
-  background-color: black;
+html body .wrapper main #frameworks-wrapper {
+  background-color: #2c2c2c;
 }
 
-html body .wrapper main #languages-wrapper #frameworks-wrapper #frameworks .framework-card {
+html body .wrapper main #frameworks-wrapper .section-header {
+  color: white;
+}
+
+html body .wrapper main #frameworks-wrapper #frameworks .framework-card {
   background-color: lightgrey;
   color: black;
   border: 2px solid #583d58;
 }
 
-html body .wrapper main #languages-wrapper #frameworks-wrapper #frameworks .framework-card .framework-text {
+html body .wrapper main #frameworks-wrapper #frameworks .framework-card .framework-text {
   border-left: 3px solid #583d58;
 }
 
-html body .wrapper main #languages-wrapper #projects-wrapper {
+html body .wrapper main #projects-wrapper {
   background-color: black;
+}
+
+html body .wrapper main #projects-wrapper .section-header {
+  color: white;
 }
 /*# sourceMappingURL=darkmode.css.map */
