--- a/style.css
+++ b/style.css
@@ -39,6 +39,50 @@
   }
 }
 
+@-webkit-keyframes icon-appear {
+  from {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes icon-appear {
+  from {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@-webkit-keyframes icon-disappear {
+  from {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  to {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+}
+
+@keyframes icon-disappear {
+  from {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  to {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+}
+
 /* ============================================ */
 /* ============== Custom fonts ================ */
 /* ============================================ */
@@ -91,9 +135,9 @@ html body .wrapper .navbar {
   width: 100%;
   z-index: 100;
   background: #000;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: top;
+      -ms-flex-align: top;
+          align-items: top;
   /* Horizontal Menu Items */
   /* [ON SMALL SCREENS] */
 }
@@ -103,18 +147,21 @@ html body .wrapper .navbar #hamnav {
       -ms-flex: 80%;
           flex: 80%;
   width: 100%;
-  padding: 0px 20px;
   top: 0;
 }
 
 html body .wrapper .navbar .darkmode-button {
-  padding: 6px;
+  margin-top: 7px;
+  height: 40px;
+  padding: 5px;
   border-radius: 6px;
   -webkit-box-flex: 5%;
       -ms-flex: 5%;
           flex: 5%;
   background-color: #3d3d3d;
   text-align: center;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 }
 
 html body .wrapper .navbar .darkmode-button i {
@@ -128,11 +175,17 @@ html body .wrapper .navbar .darkmode-button .light-icon {
   display: none;
 }
 
-html body .wrapper .navbar .darkmode-button:hover > i {
+html body .wrapper .navbar .darkmode-button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+html body .wrapper .navbar .darkmode-button:hover i {
   color: #1eff00;
 }
 
 html body .wrapper .navbar .social-media-icons {
+  margin-top: 7px;
   -webkit-box-flex: 15%;
       -ms-flex: 15%;
           flex: 15%;
@@ -155,8 +208,8 @@ html body .wrapper .navbar .social-media-icons i {
 
 html body .wrapper .navbar .social-media-icons i:hover {
   color: #1eff00;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 html body .wrapper .navbar #hamnav label, html body .wrapper .navbar #hamburger {
@@ -172,9 +225,9 @@ html body .wrapper .navbar #hamitems {
 html body .wrapper .navbar #hamitems a {
   width: 20%;
   /* 100% / 5 tabs = 20% */
-  padding: 0px 25px 15px 0px;
+  padding: 0px 0px 15px 25px;
   color: white;
-  font-family: cascadia, monospace, Impact;
+  font-family: "Roboto", monospace, Impact;
   text-decoration: none;
   text-align: center;
   -webkit-transition: 0.6s;
@@ -185,7 +238,7 @@ html body .wrapper .navbar #hamitems a:hover {
   color: #1eff00;
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1163px) {
   html body .wrapper .navbar {
     /* Show Hamburger Icon */
     /* Break down menu items into vertical */
@@ -221,9 +274,9 @@ html body .wrapper #landing {
   padding: 10% 10%;
   display: block;
   position: relative;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 15% calc(100% - 7vh), 0 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 15% calc(100% - 7vh), 0 100%);
-  background-color: #e5cbba;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%);
+  background-color: #e5dbba;
   z-index: 95;
   color: black;
 }
@@ -231,7 +284,7 @@ html body .wrapper #landing {
 html body .wrapper #landing::before {
   content: "";
   background-image: unset;
-  background-image: repeating-linear-gradient(25deg, #424242 3px, darkgrey 3px, #424242 8px);
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0), black), repeating-linear-gradient(25deg, #424242 3px, darkgrey 3px, #424242 8px);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -252,13 +305,17 @@ html body .wrapper #landing .landing-left {
 }
 
 html body .wrapper #landing .landing-right {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
   text-align: right;
 }
 
 html body .wrapper #landing .landing-item {
   display: inline-block;
   width: 40%;
+}
+
+html body .wrapper #landing #heading {
+  font-family: "cascadia";
 }
 
 html body .wrapper #landing #subhead {
@@ -285,12 +342,12 @@ html body .wrapper main {
 }
 
 html body .wrapper main #languages-wrapper {
-  background-color: #e5cbba;
+  background-color: #e5dbba;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 15% calc(100% - 7vh), 0 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 15% calc(100% - 7vh), 0 100%);
-  margin-top: -6vh;
-  -webkit-clip-path: polygon(0 7vh, 15% 0, 100% 7vh, 100% 100%, 15% calc(100% - 7vh), 0 100%);
-          clip-path: polygon(0 7vh, 15% 0, 100% 7vh, 100% 100%, 15% calc(100% - 7vh), 0 100%);
+  margin-top: -3vh;
+  -webkit-clip-path: polygon(10% 0%, 90% 4vh, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%, 0 4vh);
+          clip-path: polygon(10% 0%, 90% 4vh, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%, 0 4vh);
   padding: 25px 0px 100px 25px;
   z-index: 85;
 }
@@ -328,41 +385,41 @@ html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card {
 }
 
 html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card:hover {
-  -webkit-transform: translateY(2px);
-          transform: translateY(2px);
-  -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2) inset;
-          box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2) inset;
+  -webkit-transform: scale(1.04);
+          transform: scale(1.04);
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(87, 87, 87, 0.8);
+          box-shadow: 0px 0px 10px 5px rgba(87, 87, 87, 0.8);
 }
 
-html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card .lang-text p {
+html body .wrapper main #languages-wrapper #languages .lang-cards .lang-text p {
   font-family: "Roboto", sans-serif;
 }
 
-html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card ul {
+html body .wrapper main #languages-wrapper #languages .lang-cards ul {
   text-align: left;
 }
 
-html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card .lang-img {
+html body .wrapper main #languages-wrapper #languages .lang-cards .lang-img {
   height: 150px;
   width: 150px;
 }
 
-html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card .php-img {
+html body .wrapper main #languages-wrapper #languages .lang-cards .php-img {
   height: 70%;
   margin: 20% 0 20% 0%;
 }
 
 @media only screen and (max-width: 455px) {
-  html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card .php-img {
+  html body .wrapper main #languages-wrapper #languages .lang-cards .php-img {
     margin: 15% 0 15% 0;
   }
 }
 
-html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card .css-img {
+html body .wrapper main #languages-wrapper #languages .lang-cards .css-img {
   width: 70%;
 }
 
-html body .wrapper main #languages-wrapper #languages .lang-cards .lang-card .sql-img {
+html body .wrapper main #languages-wrapper #languages .lang-cards .sql-img {
   border-radius: 4%;
 }
 
@@ -382,9 +439,9 @@ html body .wrapper main #frameworks-wrapper {
   padding: 0;
   margin: 0;
   width: 100%;
-  margin-top: -6vh;
-  -webkit-clip-path: polygon(0 7vh, 15% 0, 100% 7vh, 100% 100%, 15% calc(100% - 7vh), 0 100%);
-          clip-path: polygon(0 7vh, 15% 0, 100% 7vh, 100% 100%, 15% calc(100% - 7vh), 0 100%);
+  margin-top: -3vh;
+  -webkit-clip-path: polygon(10% 0%, 90% 4vh, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%, 0 4vh);
+          clip-path: polygon(10% 0%, 90% 4vh, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%, 0 4vh);
   padding: 25px 0px 100px 25px;
   z-index: 80;
 }
@@ -411,7 +468,7 @@ html body .wrapper main #frameworks-wrapper #frameworks .framework-card {
   background-color: #846292;
   color: black;
   padding: 1em 0.25em;
-  border: 2px solid #583d58;
+  border: 3px solid #583d58;
   border-radius: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -480,9 +537,9 @@ html body .wrapper main #frameworks-wrapper #frameworks .framework-card .framewo
 
 html body .wrapper main #projects-wrapper {
   background-color: #d4d4b3;
-  margin-top: -6vh;
-  -webkit-clip-path: polygon(0 7vh, 15% 0, 100% 7vh, 100% 100%, 15% calc(100% - 7vh), 0 100%);
-          clip-path: polygon(0 7vh, 15% 0, 100% 7vh, 100% 100%, 15% calc(100% - 7vh), 0 100%);
+  margin-top: -3vh;
+  -webkit-clip-path: polygon(10% 0%, 90% 4vh, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%, 0 4vh);
+          clip-path: polygon(10% 0%, 90% 4vh, 100% 0, 100% calc(100% - 4vh), 90% 100%, 10% calc(100% - 4vh), 0 100%, 0 4vh);
   padding: 25px 0px 100px 25px;
   width: 100%;
   height: 400px;
