--- a/darkmode.scss
+++ b/darkmode.scss
@@ -1,12 +1,8 @@
-$code-green: rgb(30, 255, 0);
-$language-background: rgb(22, 22, 22);
-$project-background: black;
-//$language-card: lightgrey;
-$language-card: rgb(163, 163, 163);
-$project-card: lightgrey;
-$darkmode-framework-background: rgb(44, 44, 44);
-$framework-card: lightgrey;
+@import './styles/variables.scss';
 
+.section-header {
+    color: white;
+}
 html {
 
     body {
@@ -82,9 +78,16 @@ html {
             }
             #landing {
                 background-image: unset;
-                background-image: linear-gradient(45deg, rgba(0,0,0,1) 95%,rgba(0, 0, 0, 0)), repeating-linear-gradient(25deg, rgb(31, 31, 31) 10px, rgb(58, 58, 58) 10px, rgb(31,31,31) 8px);
-                // background-image: /*linear-gradient(rgba(255, 255, 255, 0.39), rgba(255, 255, 255, 0) 55%),*/ linear-gradient(rgba(0,0,0,0), rgba(0,0,0,1) 85%), repeating-linear-gradient(45deg, rgb(44, 39, 39) 99%, rgb(95, 91, 91));
+                background-image: linear-gradient(45deg, 
+                                                 rgba(0,0,0,1) 95%,
+                                                 rgba(0, 0, 0, 0)
+                                                 ),
 
+                                  repeating-linear-gradient(25deg,
+                                                            rgb(31, 31, 31) 10px,
+                                                            rgb(58, 58, 58) 10px,
+                                                            rgb(31,31,31) 8px
+                                                            );
                 color: white;
             }
 
@@ -92,22 +95,21 @@ html {
             main {
                 margin: 0;
                 #languages-wrapper {
-                    background-color: $language-background;
-                    padding-left: 3vw;
+                    background-color: $darkmode-language-background;
                     .section-header {
                         color: white;
                     }
                     #languages {
-                        .lang-cards {
+                        .card {
+                            &:hover {
+                                transform: scale(1.02);
+                                
+                                box-shadow: 0px 0px 10px 5px rgba(87, 87, 87, 0.8);
+                            }
 
-                            .lang-card {
-                                background-color: $language-card;
-                                color: black;
-                                &:hover {
-                                    transform: scale(1.04);
-                                    
-                                    box-shadow: 0px 0px 10px 5px rgba(87, 87, 87, 0.8);
-                                }
+                            .card-front {
+                                background-color: $darkmode-language-card;
+
                             }
                         }
                     }
@@ -115,34 +117,54 @@ html {
                 // Languages End
                     #frameworks-wrapper {
                         background-color: $darkmode-framework-background;
-                        .section-header {
-                            color: white;
-                        }
-                        #frameworks {
-                            
-                            .framework-card {
-                                background-color: $framework-card;
-                                color: rgb(0, 0, 0);
-                                border: 2px solid rgb(88, 61, 88);
-                                .framework-text {
-                                    border-left: 3px solid rgb(88, 61, 88);//rgb(48, 45, 41);
-                                }
-                            }
-                        }
+                        // .section-header {
+                        //     a {
+                        //         color: white;
+                        //     }
+                        //}
                     }
                 // ************************************************
                 // FRameworks end
                 // ************************************************
-
                 #projects-wrapper {
-                    .section-header {
-                        color: white;
+                    color: white;
+                    background-color: $darkmode-project-background;
+                    .projects {
+
+                        .project {
+                            border: 1px solid $code-green;
+                        background-color: rgb(37, 37, 37);
+                        background-color: $darkmode-project-card;
+                        
+                            .hover-text {
+                                color: $code-green;
+                            }
+                            
+                            .project-header-wrapper {
+                                a {
+                                    color: white;
+                                }
+                            }
+                        }
                     }
-                    background-color: $project-background;
+                }
+                #certifications-wrapper {
+                    color: white;
+                    background-color: $darkmode-certifications-background;
                 }
                 // ************************************************
                 // Main end
                 // ************************************************
+            }
+            #footer {
+
+                color: $code-green;
+                background-color: $darkmode-footer-background;
+                h2 {
+                    color: white;
+
+                }
+
             }
         }
     }
